[tool.poetry]
name = "seamaze"
version = "0.0.1"
description = "A python library for classical and dynamical low-rank CMA-ES."
license = "MIT"
authors = [ "Tim Ortkamp <tim.ortkamp@gmx.de>" ]
readme = "README.md"
repository = "https://github.com/pyanno4rt/seamaze"
documentation = "https://seamaze.readthedocs.io/en/latest/"
keywords = [ "python", "optimization", "black-box-optimization", "evolution-strategies", "cma-es", "dynamical-low-rank" ]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries"
]

[[tool.poetry.packages]]
include = "seamaze"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=2.4.4"
numba = ">=0.65.0"
matplotlib = ">=3.10.8"
seaborn = ">=0.13.2"

[tool.poetry.group.dev.dependencies]
ipython = ">=9.10.1"
spyder = ">=6.1.4"
spyder-kernels = ">=3.1.4"
jupyter = ">=1.1.1"
sphinx = ">=9.0.4"
sphinx-rtd-theme = ">=3.1.0"
sphinx-autoapi = "3.6.0"
myst-nb = ">=1.4.0"
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
coveralls = ">=4.1.0"
sphinx-copybutton = ">=0.5.2"
sphinx-last-updated-by-git = ">=0.3.8"
sphinx-favicon = ">=1.1.0"
myst-sphinx-gallery = ">=0.3.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pyanno4rt/seamaze/issues"

[tool.coverage.run]
omit = []

[build-system]
requires = [ "setuptools", "poetry-core" ]
build-backend = "poetry.core.masonry.api"
